--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -78,7 +78,7 @@
 				</div>
 
 				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel">
-					<h1>Points Per Jam</h1>
+					<h1 class="NoLogo">Points Per Jam</h1>
 					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
 					<div class="PPJContainer Wrapper">
 						<div class="Wrapper Team Team1">
@@ -86,20 +86,21 @@
 						</div>
 						<div class="Wrapper Team Team2">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
-						</div>
-					</div>
+						</div> </div>
 					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>	
 				</div>
 
 
 				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
-					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>	
+					<img class="TeamLogo TeamLogo1" src="" />
+					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>
 					<h2>Team Roster</h2>
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
 
 				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<img class="TeamLogo TeamLogo2" src="" />
 					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
 					<h2>Team Roster</h2>
 					<div class="Wrapper Team Team2 SortBox">
@@ -107,6 +108,7 @@
 				</div>
 
 				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<img class="TeamLogo TeamLogo1" src="" />
 					<h1>Penalty Board</h1>
 					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
 					<div class="Wrapper Team Team1 SortBox">
@@ -114,6 +116,7 @@
 				</div>
 
 				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<img class="TeamLogo TeamLogo2" src="" />
 					<h1>Penalty Board</h1>
 					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>	
 					<div class="Wrapper Team Team2 SortBox">
