Added 'Keep' Lower Third Value for Easy Re-Access

--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -52,6 +52,11 @@
 					<select id="Skaters">
 					</select>
 
+					<select id="Keepers" style="width: 80%; float: left;">
+						<option data-line1="" data-line2="" data-style="ColourDefault">--- Clear ---</option>
+					</select>
+					<button id="KeeperAdd" style="width: 15%; ">+</button>
+
 				</div>
 			</div>
 
