--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -95,6 +95,8 @@
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>
 					<h2>Team Roster</h2>
+				</div>
+				<div class="RosterTeam1 RosterTeam LowerPart AnimationDelay PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
@@ -103,6 +105,8 @@
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
 					<h2>Team Roster</h2>
+				</div>
+				<div class="RosterTeam2 RosterTeam LowerPart AnimationDelay PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team2 SortBox">
 					</div>
 				</div>
@@ -111,6 +115,8 @@
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1>Penalty Board</h1>
 					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
+				</div>
+				<div class="PenaltyTeam1 PenaltyTeam AnimationDelay LowerPart PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
@@ -119,7 +125,21 @@
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1>Penalty Board</h1>
 					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>	
+				</div>
+				<div class="PenaltyTeam2 PenaltyTeam AnimationDelay LowerPart PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team2 SortBox">
+					</div>
+				</div>
+
+				<div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<div>
+						<img class="TeamLogo TeamLogo1" src="" style="float: left;" />
+						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>	
+					</div>
+					<div class="UpcomingVS">VS</div>
+					<div>
+						<img class="TeamLogo TeamLogo2" src="" style="float: right;" />
+						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>	
 					</div>
 				</div>
 
@@ -129,7 +149,7 @@
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
 					<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
 				</div>
-			</div,Name>
+			</div>
 
 	</div>
 
