Added "Cue Alert" used by DDTV to indicate replay pending

--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -17,7 +17,8 @@
 			<button data-key="J" data-setting="Custom.Overlay.ShowJammers" class="ToggleSwitch">Jammers [J]</button><br/>
 		</p>
 
-		<br/><br/>
+		<h2>Notify</h2>
+		<button data-key="A" data-setting="Custom.Overlay.Alert" class="ToggleSwitch ToggleAlert">Cue Alert [A]</button><br/>
 
 		<p id="Panel">
 			<h2>Panels</h2>
