--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -76,7 +76,7 @@
 			<div class="ShowInLineup ShowInTimeout Clock Period Small Time Box AutoFit" sbContext="Clock(Period)" sbDisplay="Time" sbModify="toTime"></div>
 			<div class="ShowInLineup ShowInTimeout Clock Period Small NameNumber Box AutoFit" sbContext="Clock(Period)" sbDisplay="Name,Number" sbModify="toClockInitialNumber"></div>
 			<div class="ShowInLineup ShowInTimeout Clock Jam Small NameNumber Box AutoFit" sbContext="Clock(Jam)" sbDisplay="Name,Number" sbModify="toClockInitialNumber"></div>
-			<div class="ShowInLineup ShowInTimeout Clock Description Small Box AutoFit" sbDisplay="Clock(Lineup).Name, Clock(Lineup).Running, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReview, Team(1).Timeouts, Team(1).OfficialReviews, Team(2).Timeouts, Team(2).OfficialReviews" sbModify="smallDescriptionUpdate"></div>
+			<div class="ShowInLineup ShowInTimeout Clock Description Small Box AutoFit" sbDisplay="Clock(Lineup).Name, Clock(Lineup).Running, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReview, Team(1).Timeouts, Team(1).OfficialReviews, Team(1).RetainedOfficialReview, Team(2).Timeouts, Team(2).OfficialReviews, Team(2).RetainedOfficialReview" sbModify="smallDescriptionUpdate"></div>
 			<div class="ShowInLineup Clock Lineup Small Box AutoFit" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
 			<div class="ShowInTimeout Clock Timeout Small Box AutoFit" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
 
