--- a/html/views/overlays/interactive/index.css
+++ b/html/views/overlays/interactive/index.css
@@ -15,9 +15,13 @@
  */
 
 html 		{ height: 100%; width: 100%; }
-body		{ width: 1920px; height: 1080px; margin: 0 auto; }
+body		{ margin: 0 auto; }
 
-body 		{ background-color: #00ff00; 
+.VideoBackground { width: 100%; height: 100%; top: 0; left: 0; position: absolute; z-index: -99; }
+video		{ width: 100%; height: 100%; }
+#VIDEO-GREEN	{ background-color: #00ff00;  }
+
+body 		{ 
 		  font-family: 'Ubuntu', 'LiberationSans', helvetica; font-weight: bold; margin: 0; padding: 0; overflow: hidden; 
 		}
 div 		{ white-space: nowrap; display: block; padding: 0; margin: 0;  overflow: hidden; }
