--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -1,10 +1,11 @@
-<html>
+      <html>
 	<head>
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/json/WS.js"></script>
 		<script type="text/javascript" src="/views/standard/common.js"></script>
-		<style title="jsStyle"></style>
+
+		<style  type="text/css" title="jsStyle"></style>
 	</head>
 	<body>
 		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="Custom.Overlay.ShowJammers">
@@ -152,8 +153,7 @@
 			</div>
 
 	</div>
+	<div id="VIDEO-GREEN" class="VideoBackground"></div>
+	<div id="VIDEO-CAMERA" class="VideoBackground"><video></video></div>
+</html>
 
-	</html>
-
-	</div>
-	</html>
