--- a/html/views/standard/index.css
+++ b/html/views/standard/index.css
@@ -34,10 +34,40 @@ body {
   background: #000000;
 }
 
-#sb {
+#scoreboard {
 	position: absolute;
 	left: 0px; top: 0px; width: 100%; height: 100%;
 }
+
+.DisplayPane {
+	opacity: 0;
+	position: absolute;
+	left: 0; top: 0;
+	width: 100%; 
+	height: 100%;
+}
+.DisplayPane.Hide {
+	animation: HidePanel 1s;
+	-moz-animation: HidePanel 1s;
+	-webkit-animation: HidePanel 1s;
+}
+.DisplayPane.Show {
+	animation: ShowPanel 1s;
+	-moz-animation: ShowPanel 1s;
+	-webkit-animation: ShowPanel 1s;
+	opacity: 1;
+}
+.DisplayPane>.object {
+	width: 100%;
+	height: 100%;
+	scrolling: no; frameborder: 0px; border: 0px;
+}
+	@-moz-keyframes ShowPanel         {  0% { opacity: 0; } 100% { opacity: 1; } }
+	@-webkit-keyframes ShowPanel      {  0% { opacity: 0; } 100% { opacity: 1; } }
+	@keyframes ShowPanel              {  0% { opacity: 0; } 100% { opacity: 1; } }
+	@-moz-keyframes HidePanel         {  0% { opacity: 1; } 100% { opacity: 0; } }
+	@-webkit-keyframes HidePanel      {  0% { opacity: 1; } 100% { opacity: 0; } }
+	@keyframes HidePanel              {  0% { opacity: 1; } 100% { opacity: 0; } }
 
 div {
 	text-align: center;
@@ -120,7 +150,7 @@ body.box_flat .Box.FlatTop {
 	height: 10%;
 	font-size: 10vh;
 }
-#sb.JamScore .Team>.Name { width: 43%; }
+#scoreboard.JamScore .Team>.Name { width: 43%; }
 
 .Team>.Logo {
 	position: absolute;
@@ -140,7 +170,7 @@ body.box_flat .Box.FlatTop {
 	top: 0%;
 	height: 30%;
 }
-#sb.JamScore .Team>.Logo { width: 43%; }
+#scoreboard.JamScore .Team>.Logo { width: 43%; }
 
 .Team>.Score {
 	position: absolute;
@@ -152,8 +182,8 @@ body.box_flat .Box.FlatTop {
 }
 .Team.Left>.Score { left: 7%; }
 .Team.Right>.Score { right: 7%; }
-#sb.JamScore .Team.Left>.Score { left: 4%; width: 35%; }
-#sb.JamScore .Team.Right>.Score { right: 4%; width: 35%; }
+#scoreboard.JamScore .Team.Left>.Score { left: 4%; width: 35%; }
+#scoreboard.JamScore .Team.Right>.Score { right: 4%; width: 35%; }
 
 .Team>.JamScore {
 	position: absolute;
@@ -162,7 +192,7 @@ body.box_flat .Box.FlatTop {
 	top: 39%;
 	font-size: 11vh;
 }
-#sb:not(.JamScore) .JamScore {
+#scoreboard:not(.JamScore) .JamScore {
 	opacity: 0;
 }
 .Team.Left>.JamScore { left: 39.5%; }
@@ -180,13 +210,13 @@ body.box_flat .Box.FlatTop {
 .Team.Left>.OfficialReviews { left: 0.5%; }
 .Team.Right>.OfficialReviews { right: 0.5%; }
 
-#sb.JamScore .Timeouts.Header { opacity: 0; }
-#sb.JamScore .OfficialReviews.Header { opacity: 0; }
-#sb.JamScore .Timeouts { opacity: 0; }
-#sb.JamScore .OfficialReviews { opacity: 0; }
+#scoreboard.JamScore .Timeouts.Header { opacity: 0; }
+#scoreboard.JamScore .OfficialReviews.Header { opacity: 0; }
+#scoreboard.JamScore .Timeouts { opacity: 0; }
+#scoreboard.JamScore .OfficialReviews { opacity: 0; }
 
-#sb:not(.JamScore) .DotTimeouts { opacity: 0; }
-#sb:not(.JamScore) .DotOfficialReviews { opacity: 0; }
+#scoreboard:not(.JamScore) .DotTimeouts { opacity: 0; }
+#scoreboard:not(.JamScore) .DotOfficialReviews { opacity: 0; }
 
 .DotTimeouts { position: absolute; height: 14%; width: 3%; top: 31% }
 .DotOfficialReviews { position: absolute; height: 5%; width: 3%; top: 46% }
