--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -7,7 +7,10 @@
 	</head>
 	<body>
 		<div class="ConnectionError">Not connected</div>
-		<div id="sb" sbContext="ScoreBoard" class="JamScore">
+		<div class="DisplayPane" id="image"><img class="object"/></div>
+		<div class="DisplayPane" id="video"><video class="object"onended="this.play();"></video></div>
+		<div class="DisplayPane" id="html"><iframe class="object"></iframe></div>
+		<div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard" class="JamScore">
 			<div class="Team Team1 Left" sbContext="Team(1)">
 				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
