--- a/html/views/overlays/interactive/index.css
+++ b/html/views/overlays/interactive/index.css
@@ -47,9 +47,10 @@ div 		{ white-space: nowrap; display: block; padding: 0; margin: 0;  overflow: h
 .Box 			{ float: left; margin: 0; padding: 0; position: relative; display: block; }
 
 /* Team Boxes */
-.Team .Name 		{ width: 47%; padding-left: 2%; padding-right: 3%; }
-.Team .Score		{ width: 27%; text-align: right; padding-right: .1em ; }
-.Team .Mini		{ width: 10%; font-size: 50%; }
+.Team .Name 		{ width: 64%; padding-left: 1%; 
+                  border-left: 2px solid #666;  }
+.Team .Score		{ width: 18%; text-align: right; padding-right: .1em ; font-size: 90%; }
+.Team .Mini		{ width: 8%; font-size: 45%; line-height: 99%; padding-top: 2px; }
 
 .Team .Mini .LeadJammer,
 .Team .Mini .JamScore	{ width: 100%; text-align: center; }
@@ -57,10 +58,11 @@ div 		{ white-space: nowrap; display: block; padding: 0; margin: 0;  overflow: h
 .Team .Lead		{ opacity: .2; }
 .Team .HasLead		{ opacity: 1; color: red; }
 
-.Team .DotTimeouts	{ width: 5%; margin-top: 1%; }
+.Team .DotTimeouts	{ width: 3%; }
 
-.Dot 			{ width: .2em; height: .2em; margin: 10% 0 10% 20%; }
+.Dot 			{ width: .3vw; height: .3vw; margin: .1vw 0 0 0; }
 .Dot, .Dot.Active 	{ border-radius: 100%; }
+
 .Dot 			{ background: #333; }
 .Dot.OfficialReview1 	{ background: #fff; }
 .Dot.Active 		{ opacity: 0; animation: DotActive 0.75s infinite steps(6); -moz-animation: DotActive 0.75s infinite steps(6); -webkit-animation: DotActive 0.75s infinite steps(6); }
@@ -126,27 +128,32 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .AnimatedPanel.MediumPanel		{ bottom: 5%; width: 20%; height: 8em; top: auto; border-radius: 10px; left: 40%;  } 
 .AnimatedPanel.LowerThird 		{ top: 80%; left: 0; text-align: right; min-width: 45%; width: auto; } 
 
-.TeamBox 				{ top: 2%; left: 10%; font-size: 2.2em; width: 16em;  }
+.TeamBox 				      { top: 2%; left: 10%; font-size: 1.8em; line-height: 100%; width: 23em;   }
 
 .TeamBox .Team				{ float: left; -webkit-transition: border-radius 1s; }
-.TeamBox .JammerBox			{ float: left; -webkit-transition: margin-left 2s;   padding: 1px 0; }
+.TeamBox .JammerBox			{ float: left; -webkit-transition: margin-left 2s; }
 
-.TeamBox .Team				{ width: 50%; }
-.TeamBox .JammerWrapper			{ width: 40%; overflow: none; position: relative; }
+.TeamBox .Team				    { width: 50%; }
+.TeamBox .JammerWrapper		{ width: 40%; overflow: none; position: relative; }
 
 .TeamBox .JammerBox			{ width: 100%; }
 
 .TeamBox .JammerBox .JammerName,
-.TeamBox .Team .Name			{ text-align: left; overflow: hidden; }
-.TeamBox .Team .Indicator		{ width: .3em; min-height: 1em; }
-.TeamBox .JammerBox .JammerName		{ font-size: 50%; margin-left: 1vw; min-height: 1em; }
+.TeamBox .Team .Name			{ text-align: left; overflow: hidden; font-size: 80%; }
+
+.TeamBox .Team .Indicator		{ width: .5em; height: 100%; }
+.TeamBox .JammerBox .JammerName		{ font-size: 50%; margin-left: 1vw; height: 100%; }
+
+.TeamBox .Team      { border-right: 2px solid #333; }
 
 .TeamBox .Team1	.Team			{ border-radius: 8px 8px 0 0; }
 .TeamBox .Team2	.Team			{ border-radius: 0 0 8px 8px; }
+
 .TeamBox .Team1 .JammerBox		{ border-radius: 0 8px 8px 0; }
 .TeamBox .Team2 .JammerBox		{ border-radius: 0 8px 8px 0; }
 
 .TeamBox .Team1.HasJammerName .Team	{ border-radius: 8px 0 0 0; }
+.TeamBox .Team2.HasJammerName .Team	{ border-radius: 0 0 0 8px; }
 
 
 .ShowJammers[Clock="Jam"] .TeamBox .Team1 .Team { border-radius: 8px 0 0 0; }
@@ -226,7 +233,7 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .RosterTeam .Team .Skater	{ font-size: 1.5em; line-height: 1.8em; }
 .RosterTeam .Team .Skater .Number,
 .RosterTeam .Team .Skater .Flags,
-.RosterTeam .Team .Skater .Name   { min-height: 1.9em; max-height: 1.9em; float: left; overflow: none; }
+.RosterTeam .Team .Skater .Name   { min-height: 1.7em; max-height: 1.7em; float: left; overflow: none; }
 
 
 .RosterTeam .Team .Skater:nth-child(1) .Number, .RosterTeam .Team .Skater:nth-child(2) .Number,
@@ -234,7 +241,7 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .RosterTeam .Team .Skater:nth-last-child(1) .Number, .RosterTeam .Team .Skater:nth-last-child(2) .Number,
 .RosterTeam .Team .Skater:nth-last-child(1), .RosterTeam .Team .Skater:nth-last-child(2) { border-radius: 0 0 10px 10px; }
 
-.PenaltyTeam .Team .Skater { width: 100%; font-size: 1.2em; line-height: 1.5em; height: 1.5em; }
+.PenaltyTeam .Team .Skater { width: 100%; font-size: 1.2em; line-height: 1.4em; height: 1.4em; }
 .PenaltyTeam .Team .Skater:nth-child(odd)  {  background: #ccc; }
 .PenaltyTeam .Team .Skater:nth-child(even) {  background: #ddd; }
 
@@ -291,7 +298,7 @@ div.PanelWrapperTop    .AnimatedPanel.PanelHideTop.show	{ -webkit-transform: tra
 
 .TeamLogo	{ float: left; }
 .PenaltyTeam .TeamLogo {  margin-bottom: .5em; }
-.RosterTeam .TeamLogo {  margin-bottom: 1em; }
+.RosterTeam .TeamLogo {  margin-bottom: .5em; }
 
 .Upcoming	{ padding-top: 4em; }
 .Upcoming h1 	{ border-radius: 1em; }
@@ -302,11 +309,13 @@ div.PanelWrapperTop    .AnimatedPanel.PanelHideTop.show	{ -webkit-transform: tra
 .AnimatedPanel img	{ height: 0; }
 
 .AnimatedPanel.Show img  { height: 200px; }
+
 .PenaltyTeam.AnimatedPanel.Show img.TeamLogo  { height: 140px; }
 .RosterTeam.AnimatedPanel.Show  img.TeamLogo  { height: 180px; }
 
 .PanelWrapperCenter .AnimatedPanel.LowerPart { margin-top: 10em; }
-.PanelWrapperCenter .RosterTeam.AnimatedPanel.LowerPart { margin-top: 12em; }
+.PanelWrapperCenter .RosterTeam.AnimatedPanel.LowerPart { margin-top: 10.5em; }
+.PanelWrapperCenter .PenaltyTeam.AnimatedPanel.LowerPart { margin-top: 9em; }
 
 div.AnimatedPanel.AnimationDelay { -webkit-transition: -webkit-transform 1s ease-in-out .3s; }
 
