--- a/html/views/overlays/interactive/index.css
+++ b/html/views/overlays/interactive/index.css
@@ -17,6 +17,9 @@
 html 		{ height: 100%; width: 100%; }
 body		{ margin: 0 auto; }
 
+.preload * { transition: none !important; }                                                                                                                                                                        
+
+
 .VideoBackground { width: 100%; height: 100%; top: 0; left: 0; position: absolute; z-index: -99; }
 video		{ width: 100%; height: 100%; }
 #VIDEO-GREEN	{ background-color: #00ff00;  }
