--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -490,3 +490,17 @@ div.WhiteBox {
 }
 
 #mainDiv>#sbDiv { overflow: hidden; }
+
+
+#leftDiv {position: absolute; right: 100%;}
+#rightDiv {position: absolute; left: 100%;}
+#topDiv {position: absolute; bottom: 100%;}
+#bottomDiv {position: absolute; top: 100%;}
+ 
+.mainDivSurround {
+	width: 100%; 
+	height: 100%; 
+	background-color: #000000; /* background color surrounding the scoreboard */
+	background-position: initial initial; 
+	background-repeat: initial initial;
+	}
