--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -60,7 +60,9 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
 	#TeamTime table.Team tr.Score td a.Change { font-size: 200%; line-height: 175%; }
 	#TeamTime table.Team tr.Score td a.JamScore { font-size: 200%; line-height: 175%; }
+	#TeamTime table.Team tr.Timeout td.Timeout button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
+	#TeamTime table.Team tr.Timeout td.OfficialReview button.Active { color: #000; background: #3f3; }
 	#TeamTime table.Team tr.Timeout td.OfficialReviews a { font-size: 200%; }
 	#TeamTime table.Team tr.Timeout td.RetainedOfficialReview button.Active { color: #000; background: #F33; }
 	#TeamTime table.Team tr.Jammer td.ui-buttonset label.Lead.ui-state-active { background: #3f3; }
