Added files forgotten in previous commit

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -39,16 +39,22 @@
 						<div class="Timeout3 Dot"></div>
 					</div>
 				</div>
-				<div class="JamTotals OfficialReviews">
-					<div class="Team Team1 Number WhiteBox"></div>
-					<div class="Team Team1 Number TextContainer">
-						<div class="OfficialReview Dot"></div>
-					</div>
-					<div class="Team Team2 Number WhiteBox"></div>
-					<div class="Team Team2 Number TextContainer">
-						<div class="OfficialReview Dot"></div>
-					</div>
-				</div>
+                                <div class="JamTotals OfficialReviews">
+                                        <div class="Team Team1 Number WhiteBox"></div>
+                                        <div class="Team Team1 Number TextContainer">
+                                                <div class="OfficialReview Cross">
+                                                        <div class="CrossH"></div>
+                                                        <div class="CrossV"></div>
+                                                </div>
+                                        </div>
+                                        <div class="Team Team2 Number WhiteBox"></div>
+                                        <div class="Team Team2 Number TextContainer">
+                                                <div class="OfficialReview Cross">
+                                                        <div class="CrossH"></div>
+                                                        <div class="CrossV"></div>
+                                                </div>
+                                        </div>
+                                </div>
 				<div class="JamTotals JamPoints">
 					<!--
 					<div class="Name WhiteBox"></div>
