--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -51,7 +51,7 @@ table.RowTable { border-spacing: 0px; }
 
 	#TeamTime table.JamControl>tbody>tr>td { width: 100%; }
 	#TeamTime table.JamControl>tbody>tr:first-of-type>td { border-radius: 12px; }
-	.UndoControls:not(.ShowUndo) { display: none; }
+	#TeamTime .UndoControls:not(.ShowUndo) { display: none; }
 
 	#TeamTime table.Team>tbody>tr>td { width: 50%; }
 	#TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; }
@@ -81,8 +81,8 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Time tr.Time td.Time a { font-size: 200%; }
 	#TeamTime table.Time tr.TimeSet td.Button button>span { padding: 0.3em .6em; }
 
-	tr.SpeedScore:not(.Show) { display: none; }
-	tr.Control:not(.Show) { display: none; }
+	#TeamTime tr.SpeedScore:not(.Show) { display: none; }
+	#TeamTime tr.Control:not(.Show) { display: none; }
 /* End Team/Time Tab */
 
 /* Policies */
