--- a/html/views/wb/whiteboard.css
+++ b/html/views/wb/whiteboard.css
@@ -1,6 +1,7 @@
 body {	
 	font-size: 11pt;
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;"; 
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+	font-weight:bold;
 }
 table,tr,td{
 	border-collapse: collapse;
