--- a/html/views/wb/whiteboard.css
+++ b/html/views/wb/whiteboard.css
@@ -18,14 +18,14 @@ table,tr,td{
 .Team1 { left: 0.5%; }
 .Team2 { right: 0.5%; }
 .Team .Number, .Team .Box, .Team .FO_EXP, .Team .Total { width: 8.33%; }
-.Team tr:nth-child(4n+0), .Team tr:nth-child(4n-1) { background-color: #CCC; }
+.Team tr:nth-child(4n-2), .Team tr:nth-child(4n-0) { background-color: #CCC; }
 
 .Team .Warn1 { background-color: #fffd38; }
-.Team .Warn1:nth-child(4n+0), .Team .Warn1:nth-child(4n-1) { background-color: #ccca2d; }
+.Team .Warn1:nth-child(4n-2), .Team .Warn1:nth-child(4n-0) { background-color: #ccca2d; }
 .Team .Warn2 { background-color: #ff8f2b; }
-.Team .Warn2:nth-child(4n+0), .Team .Warn2:nth-child(4n-1) { background-color: #cc7222; }
+.Team .Warn2:nth-child(4n-2), .Team .Warn2:nth-child(4n-0) { background-color: #cc7222; }
 .Team .Warn3 { background-color: #ff8080; }
-.Team .Warn3:nth-child(4n+0), .Team .Warn3:nth-child(4n-1) { background-color: #cc2d2d; }
+.Team .Warn3:nth-child(4n-2), .Team .Warn3:nth-child(4n-0) { background-color: #cc2d2d; }
 
 /* responsive vertical layout on phones and tablet portrait */
 @media only screen and (max-width: 960px) { 
