put auto-fit behavior behind a query parameter flag
also completely remove auto-fit functionality from the "legacy" PT Screen

--- a/html/controls/pt/ptcolor.css
+++ b/html/controls/pt/ptcolor.css
@@ -37,7 +37,7 @@ tr:nth-child(odd) {
 
 /* responsive vertical layout on phones and tablet portrait */
 @media only screen and (min-width: 960px) {
-	.Team {
+	.Team.auto-fit {
 		height: 100vh;
 	}
 }
