auto-size PT grid to screen (#84)
* set PT table height to viewport height -- auto-size table to screen
* put auto-fit behavior behind a query parameter flag

--- a/html/controls/pt/ptcolor.css
+++ b/html/controls/pt/ptcolor.css
@@ -36,6 +36,11 @@ tr:nth-child(odd) {
 .PenaltyEditor .Codes>div .Description { font-size: 0.75em; }
 
 /* responsive vertical layout on phones and tablet portrait */
+@media only screen and (min-width: 960px) {
+	.Team.auto-fit {
+		height: 100vh;
+	}
+}
 @media only screen and (max-width: 960px) { 
    .Team{
 	position: relative;
