--- a/html/controls/pt/ptcolor.css
+++ b/html/controls/pt/ptcolor.css
@@ -1,10 +1,13 @@
-body {	
+body {	margin:0;padding:0;
 	font-size: 11pt;
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;"; 
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+	background-color:#000;
 }
+table {background-color:#fff;}
 table,tr,td{
+	border:1px solid #777;
 	border-collapse: collapse;
-	border-color:#777;
+
 	}
 /*increase readability by making penalty codes bold */
 tr:nth-child(odd) {
@@ -12,9 +15,11 @@ tr:nth-child(odd) {
 }
 .Team {
 	position: absolute;
-	width: 49%;
+	width: 49.3%;
 	top: 0%;
 }
+.FullHeight {height:100%;}
+.NormalHeight {height:200px!important;overflow:hidden;} /*must be fixed value */
 .Team thead td { font-size: 1em; font-weight: bold; background-color: #222; color: #FFF; }
 .Team td { text-align: center; vertical-align: center; }
 .Team1 { left: 0.5%; }
@@ -36,15 +41,20 @@ tr:nth-child(odd) {
 .PenaltyEditor .Codes>div .Description { font-size: 0.75em; }
 
 /* responsive vertical layout on phones and tablet portrait */
-@media only screen and (max-width: 960px) { 
+@media only screen and (min-width: 960px) {
+	.Team.auto-fit {
+		height: 100vh;
+	}
+}
+@media only screen and (max-width: 960px) {
    .Team{
 	position: relative;
 	float:left;
 	width: 99%;
 	margin-bottom:1em;
 	}
-	.Team1, .Team2 { 
-	position: relative; 
+	.Team1, .Team2 {
+	position: relative;
 	margin:2px;
 	left:auto;
 	right:auto;
