--- a/html/controls/pt/index.css
+++ b/html/controls/pt/index.css
@@ -3,13 +3,13 @@ body {
 	background-color: #333;
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;";
 }
-table,tr,td{
+table,tr,td {
 	border-collapse: collapse;
 	border-color:#777;
-	}
+}
 /*increase readability by making penalty codes bold */
-tr:nth-child(odd) {
-    font-weight:bold;
+tr {
+    color: #333;
 }
 .Team {
 	position: absolute;
