--- a/html/controls/lineups.css
+++ b/html/controls/lineups.css
@@ -25,12 +25,12 @@ div#tableDiv table td.Position,div#tableDiv table td.Box {
 	padding-bottom: 3px;
 }
 
-div#tableDiv table th.Name { width: 15%; }
 div#tableDiv table th.Number { width: 10%; }
+div#tableDiv table th.Name { width: 15%; }
 div#tableDiv table th.Bench { width: 15%; }
+div#tableDiv table th.Jammer { width: 15%; }
 div#tableDiv table th.Pivot { width: 15%; }
 div#tableDiv table th.Blocker { width: 15%; }
-div#tableDiv table th.Jammer { width: 15%; }
 div#tableDiv table th.Box { width: 15%; }
 
 div#tableDiv table.Template { display: none; }
@@ -40,18 +40,18 @@ div#tableDiv table tr>td>a.Name { font-weight: bold; }
 
 div#tableDiv table tr.Bench>td.Bench { background: #0f0; }
 div#tableDiv table tr.Bench>td.Bench>a.Bench { display: none; }
-div#tableDiv table tr:not(.Bench)>td.Bench>a.Name { display: none; }
-div#tableDiv table tr.Pivot>td.Pivot { background: #0f0; }
-div#tableDiv table tr.Pivot>td.Pivot>a.Pivot { display: none; }
-div#tableDiv table tr:not(.Pivot)>td.Pivot>a.Name { display: none; }
-div#tableDiv table tr.Blocker>td.Blocker { background: #0f0; }
-div#tableDiv table tr.Blocker>td.Blocker>a.Blocker { display: none; }
-div#tableDiv table tr:not(.Blocker)>td.Blocker>a.Name { display: none; }
+div#tableDiv table tr:not(.Bench)>td.Bench>a.Number { display: none; }
 div#tableDiv table tr.Jammer>td.Jammer { background: #0f0; }
 div#tableDiv table tr.Jammer>td.Jammer>a.Jammer { display: none; }
-div#tableDiv table tr:not(.Jammer)>td.Jammer>a.Name { display: none; }
+div#tableDiv table tr:not(.Jammer)>td.Jammer>a.Number { display: none; }
+div#tableDiv table tr.Pivot>td.Pivot { background: #0f0; }
+div#tableDiv table tr.Pivot>td.Pivot>a.Pivot { display: none; }
+div#tableDiv table tr:not(.Pivot)>td.Pivot>a.Number { display: none; }
+div#tableDiv table tr.Blocker>td.Blocker { background: #0f0; }
+div#tableDiv table tr.Blocker>td.Blocker>a.Blocker { display: none; }
+div#tableDiv table tr:not(.Blocker)>td.Blocker>a.Number { display: none; }
 
 div#tableDiv table tr>td.Box.InBox { background: #f00; }
-div#tableDiv table tr>td.Box:not(.InBox)>a.Name { display: none; }
+div#tableDiv table tr>td.Box:not(.InBox)>a.Number { display: none; }
 div#tableDiv table tr>td.Box.InBox>a.Box { display: none; }
 
