Store operator settings with login
Also move them from individual buttons into a popup dialog, in order to
allow more settings to be added without cluttering the interface.

Add frontend elements for single button undo and add it as default
option for undo.

--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -52,6 +52,7 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.JamControl>tbody>tr>td { width: 100%; }
 	#TeamTime table.JamControl>tbody>tr:first-of-type>td { border-radius: 12px; }
 	#TeamTime .UndoControls:not(.ShowUndo) { display: none; }
+	#TeamTime .SingleUndoControl:not(.ShowUndo) { display: none; }
 
 	#TeamTime table.Team>tbody>tr>td { width: 50%; }
 	#TeamTime table.Team tr.Name td.Name div { max-height: 100px; max-width: 300px; overflow: hidden; font-size: 150%; }
